Feature: add total bytes to API (#74)
